# irrexplorer

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt  scripts.py  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
dev/: .env  Makefile  docker-compose.yml  init-irrd.sh  init-irrexplorer.sh  irrd.yaml
dev/Dockerfiles/: irrd4  irrexplorer
frontend/: package.json
frontend/public/: index.html  robots.txt
frontend/src/: App.js  config.json  index.css  index.js
frontend/src/components/: asSetQuery.jsx  asnQuery.jsx  footer.jsx  home.jsx  prefixQuery.jsx  prefixTable.jsx  prefixTableBody.jsx  query.jsx  search.jsx  setQuery.jsx  status.jsx
frontend/src/components/common/: asSetExpansionTable.js  asSetIncludedTable.jsx  asSetTable.jsx  asnWithRPKIStatus.jsx  messageBadge.jsx  metadata.jsx  prefixTable.jsx  prefixTableBody.jsx  prefixTableHeader.jsx  queryForm.jsx  rpkiStatusIcon.jsx  searchForm.jsx  setIncludedTable.jsx  spinner.jsx  tableFooter.jsx
frontend/src/components/prefixTable/: asnWithRPKIStatus.jsx  messageBadge.jsx  prefixTable.jsx  prefixTableBody.jsx  prefixTableExplanation.js  prefixTableHeader.jsx  whoisModal.jsx
frontend/src/components/setExpansionTable/: asSetExpansionTable.jsx  setExpansionTable.jsx
frontend/src/services/: api.js  prefixDataSource.js
frontend/src/utils/: prefixData.js
irrexplorer/: api.py  app.py  config.py  conftest.py  exceptions.py  import_data.py  report.py  settings.py  state.py
irrexplorer/api/: __init__.py  collectors.py  interfaces.py  queries.py  report.py  responses.py  utils.py
irrexplorer/api/tests/: test_report.py
irrexplorer/backends/: bgp.py  common.py  irrd.py  metadata.py  registro.py  rirstats.py  utils.py
irrexplorer/backends/tests/: test_bgp_import.py  test_registro.py  test_rirstats_import.py
irrexplorer/commands/: import_data.py
irrexplorer/storage/: collectors.py  tables.py
irrexplorer/storage/migrations/: env.py
irrexplorer/storage/migrations/versions/: 1a8103c368a2_add_rir_registrobr.py  484f38cffab1_initial_db.py  5b62d14388b0_add_last_data_import.py
irrexplorer/tests/: conftest.py  test_clean_query.py  test_metadata.py  test_prefix.py  test_prefixes_asn.py  test_prefixes_prefix.py  test_set_expansion.py  test_set_member_of.py  test_sets_for_asn.py  test_static.py  test_status.py
