[tool.poetry]
name = "irrexplorer"
version = "0.1.0"
description = "IRR explorer"
authors = ["Sasha Romijn <github@mxsasha.eu>"]
license = "BSD-2-Clause"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
IPy = "^1.01"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
databases = {extras = ["postgresql"], version = "^0.4.1"}
alembic = "^1.5.5"
SQLAlchemy = "^1.3.23"
psycopg2-binary = "^2.8.6"
aiohttp = "^3.7.3"
aggregate6 = "^1.0.12"
asgiref = "^3.3.1"

[tool.poetry.dev-dependencies]
# Testing and related packages
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = "^5.4"

# Code style and type checks
mypy = "^0.812"
flake8 = "^3.8.4"
pep8-naming = "^0.11.1"
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
